1.3

	* Add hotplug support.

	* Added the deviceSpeed, portNumber, portNumbers and parent functions to
	System.USB.Enumeration.

	* Added the setAutoDetachKernelDriver to System.USB.DeviceHandling.

	* Added the System.USB.Misc module which exports
	the hasCapability & libusbVersion functions.

	* Extended the Verbosity type with the PrintDebug constructor.


1.2.0.1 (Fri May 23 21:50:20 UTC 2014)

	* Drop UnicodeSyntax and the dependency on base-unicode-symbols.

	* Fix build on GHC-7.8.2.


1.2 (Mon Nov 26 22:55:48 UTC 2012)

	* Make retrieving the DeviceDesc and ConfigDescs IO operations.

	* Use Vectors instead of lists in the public API.

	* Export pokeVector from System.USB.Internal.

	* Fix build & warnings on Windows.

	* Performance improvements.

	* Documentation improvements.


1.1.0.4 (Wed Nov 21 23:29:54 UTC 2012)

	* Use Foreign.Concurrent.newForeignPtr on Windows
	This will hopefully resolve #1
	This solution was also suggested by Maurício C. Antunes:
	https://bitbucket.org/mauricio/bindings-dsl/issue/11/fix-the-calling-convention-for-funptrs-to

	* Update documentation.


1.1.0.3 (Sat Sep 8 00:48:55 UTC 2012)

	* Derive Generic instances for all data types.

	* Support base-4.6 and bytestring-0.10.

	* Fix build on Windows.

	* Use the new labeled URLs in Haddock.

	* Updated copyright dates.


1.1.0.2 (Sat May 5 23:47:44 UTC 2012)

	* Lazily compute the list of digits from decodeBCD.

	* Support containers-0.5.


1.1.0.1 (Thu Apr 12 21:21:14 UTC 2012)

	* Prevent a potential space-leak.


1.1 (Sat Jan 7 20:54:10 UTC 2012)

	* Support base-4.5

	* Mark the safe modules as Trustworthy and the unsafe ones as Unsafe.

	* Replaced getEvtMgr with getWait


1.0 (Mon Sep 12 19:50:37 UTC 2011)

	* Support for isochronous reads and writes.

	* All I/O functions now use the libusb asynchronous interface when
	support for the GHC event manager is available.
	This should be more efficient and allows cancelling of an in flight